# django-trumbowyg

./: .gitignore  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.py
tests/: test_settings.py  tests.py  urls.py
trumbowyg/: forms.py  settings.py  urls.py  utils.py  views.py  widgets.py
trumbowyg/static/trumbowyg/: admin.css
trumbowyg/static/trumbowyg/langs/: eo.min.js  ru.min.js
