[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-trumbowyg"
version = "2.0.1"
authors = [
  { name="sandino", email="vdjangofan@gmail.com" },
]
description = "Trumbowyg (WYSIWYG editor) integration app for Django admin."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/sandino/django-trumbowyg"
"Bug Tracker" = "https://github.com/sandino/django-trumbowyg/issues"

[tool.isort]
profile = "black"
multi_line_output = 3
extend_skip = ["runtests.py", "setup.py"]
skip_gitignore = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
src_paths = ["trumbowyg", "tests"]

[tool.black]
target-version = ["py39"]
exclude = '''
(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | runtests.py
    | setup.py
  )
)
'''